Add Experience Page html and css

--- a/index.html
+++ b/index.html
@@ -20,43 +20,97 @@
         <!-- profile-Page-start -->
         <div class="book-page page-left">
           <div class="profile-page">
-            <img src="hassan1.png" alt="" />
+            <img src="hassanpic.png" alt="" />
             <h1>Hassan Abd El-Aziz</h1>
             <h3>Front-End Developer</h3>
             <div class="social-media">
               <a href="#"><i class="bx bxl-facebook"></i></a>
               <a href="#"><i class="bx bxl-twitter"></i></a>
               <a href="#"><i class="bx bxl-linkedin"></i></a>
-              <a href="#"><i class="bx bxl-github"></i></a>
+              <a href="https://github.com/Hassan-Abd-El-Aziz"
+                ><i class="bx bxl-github"></i
+              ></a>
             </div>
             <p>
-              Hi I'm Hassan Abd el Aziz, a Front-End Developer. Lorem ipsum dolor
-              sit amet consectetur adipisicing elit. Sequi voluptates recusandae
-              cupiditate harum iusto nulla omnis ex doloremque excepturi
-              laboriosam!
+              Hi I'm Hassan Abd el Aziz, a Front-End Developer. I am looking for
+              an opportunity to develop my Frontend Development skills by
+              working in a stimulating and learning environment. I seek to
+              contribute to innovative projects and develop outstanding user
+              experiences using the latest technologies and tools. My goal is to
+              continue learning new technologies
             </p>
             <div class="btn-box">
-                <a href="" class="btn">Download CV</a>
-                <a href="" class="btn contact-me">Contact Me</a>
+              <a href="" class="btn">Download CV</a>
+              <a href="" class="btn contact-me">Contact Me</a>
             </div>
           </div>
         </div>
         <!-- page 1 & 2 -->
-         <div class="book-page page-right" id="turn-1">
-       
+        <div class="book-page page-right turn" id="turn-1">
           <!-- page 1 work Experience -->
           <div class="page-front">
-            <h1 class="title">Work Experience</h1>
+            <h1 class="title">Experience</h1>
             <div class="workeduc-box">
               <div class="workeduc-content">
-                <span class="year">2020 - 2021</span>
+                <span class="year"
+                  ><i class="bx bxs-calendar"></i> PERSONAL PROJECTS
+                </span>
+                <h3>COFFEE SHOP WEBSITE (RESPONSIVE)</h3>
+                <p>a Travel website using HTML, CSS, and JavaScript.</p>
+                <a href="https://hassan-abd-el-aziz.github.io/Coffee/"
+                  >Visit WEBSITE</a
+                >
+              </div>
+
+              <div class="workeduc-content">
+                <span class="year"
+                  ><i class="bx bxs-calendar"></i> PERSONAL PROJECTS
+                </span>
+                <h3>TRAVEL WEBSITE (RESPONSIVE)</h3>
+                <p>Travel website using HTML, CSS, and JavaScript.</p>
+                <a href="https://hassan-abd-el-aziz.github.io/Travel/"
+                  >Visit WEBSITE</a
+                >
+              </div>
+
+              <div class="workeduc-content">
+                <span class="year"
+                  ><i class="bx bxs-calendar"></i> PERSONAL PROJECTS
+                </span>
+                <h3>PROFILE WEBSITE (RESPONSIVE)</h3>
+                <p>a profile website using HTML, CSS, and JavaScript.</p>
+                <a href="https://hassan-abd-el-aziz.github.io/Profile-Temp/"
+                  >Visit WEBSITE</a
+                >
+              </div>
+
+              <div class="workeduc-content">
+                <span class="year"
+                  ><i class="bx bxs-calendar"></i> PERSONAL PROJECTS
+                </span>
+                <h3>LOGIN PAGE (RESPONSIVE)</h3>
+                <p>
+                  I designed and developed a profile website to showcase my
+                  skills using HTML, CSS, and JavaScript.
+                </p>
+                <a href="https://hassan-abd-el-aziz.github.io/Login-Signup/#"
+                  >Visit WEBSITE</a
+                >
               </div>
             </div>
+            <span class="number-page">1</span>
+            <!-- next button -->
+            <span class="nexprev-btn" data-page="turn-1">
+              <i class="bx bx-chevron-right"></i>
+            </span>
           </div>
-          
+
           <!-- page 2 Education -->
-          <div class="page-back"></div>
-         </div>
+          <div class="page-back">
+            <h1 class="title">Education</h1>
+            عند الدقيقة 31
+          </div>
+        </div>
       </div>
     </div>
 
