added Education page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="wrapper">
       <div class="cover cover-left"></div>
@@ -45,6 +46,7 @@
             </div>
           </div>
         </div>
+
         <!-- page 1 & 2 -->
         <div class="book-page page-right turn" id="turn-1">
           <!-- page 1 work Experience -->
@@ -98,6 +100,7 @@
                 >
               </div>
             </div>
+
             <span class="number-page">1</span>
             <!-- next button -->
             <span class="nexprev-btn" data-page="turn-1">
@@ -108,7 +111,107 @@
           <!-- page 2 Education -->
           <div class="page-back">
             <h1 class="title">Education</h1>
-            عند الدقيقة 31
+            <div class="workeduc-box">
+              <div class="workeduc-content">
+                <span class="year"
+                  ><i class="bx bxs-calendar"></i>Graduation year : 2016.
+                </span>
+                <h5>
+                  - Degree, Bachelor's in Management Information Systems, Higher
+                  Technological Institute.
+                </h5>
+                <h5>- Overall Grade: Excellent</h5>
+              </div>
+
+              <div class="workeduc-content">
+                <span class="year"
+                  ><i class="bx bxs-calendar"></i> YAT Academy , 2016
+                </span>
+                <h5>- Diploma in C# Programming for Desktop Applications</h5>
+                <p style="font-size: 12px">
+                  - Learned advanced C# programming techniques.
+                </p>
+                <p style="font-size: 12px">
+                  - Developed desktop applications using .NET framework.
+                </p>
+              </div>
+
+              <div class="workeduc-content">
+                <span class="year"
+                  ><i class="bx bxs-calendar"></i> 2017 - 2018
+                </span>
+                <h5>
+                  Desktop Application Developer at Egyptian Army - Military
+                  Service
+                </h5>
+                <p style="font-size: 12px">
+                  - Designed and developed desktop applications to support
+                  military services. , Utilized C# and .NET framework for
+                  software development. , Collaborated with teams to deliver
+                  efficient and reliable solutions. , Gained experience in
+                  problem-solving and working under pressure.
+                </p>
+              </div>
+
+              <div class="workeduc-content">
+                <span class="year"
+                  ><i class="bx bxs-calendar"></i> Self-Study
+                </span>
+                <h5>- I always love learning</h5>
+                <p style="font-size: 12px">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolor, rerum.
+                </p>
+              </div>
+            </div>
+
+            <span class="number-page">2</span>
+            <!-- prev button -->
+            <span class="nexprev-btn back" data-page="turn-1">
+              <i class="bx bx-chevron-left"></i>
+            </span>
+          </div>
+        </div>
+        <!-- page 3 & 4 -->
+        <div class="book-page page-right" id="turn-2">
+          <!-- page3 my Services -->
+
+          <div class="page-front">
+            <h1 class="title">My Services</h1>
+            <div class="services-box">
+              <div class="services-content">
+                <i class="bx bx-code-alt"></i>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a href="#" class="btn">Read More</a>
+              </div>
+
+              <div class="services-content">
+                <i class="bx bxs-paint"></i>
+                <h3>Creative Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a href="#" class="btn">Read More</a>
+              </div>
+
+              <div class="services-content">
+                <i class="bx bx-bar-chart-alt"></i>
+                <h3>Digital Marketing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a href="#" class="btn">Read More</a>
+              </div>
+
+              <div class="services-content">
+                <i class="bx bxs-paint"></i>
+                <h3>Graphic Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a href="#" class="btn">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- page4 my sKills -->
+          <div class="page-back">
+            <h1 class="title">My Skills</h1>
           </div>
         </div>
       </div>
