Add Skills Page

--- a/index.html
+++ b/index.html
@@ -172,12 +172,14 @@
             </span>
           </div>
         </div>
+
         <!-- page 3 & 4 -->
-        <div class="book-page page-right" id="turn-2">
+        <div class="book-page page-right turn" id="turn-2">
           <!-- page3 my Services -->
 
           <div class="page-front">
             <h1 class="title">My Services</h1>
+
             <div class="services-box">
               <div class="services-content">
                 <i class="bx bx-code-alt"></i>
@@ -207,11 +209,56 @@
                 <a href="#" class="btn">Read More</a>
               </div>
             </div>
+
+            <span class="number-page">3</span>
+            <!-- next button -->
+            <span class="nexprev-btn" data-page="turn-2">
+              <i class="bx bx-chevron-right"></i>
+            </span>
           </div>
 
           <!-- page4 my sKills -->
           <div class="page-back">
             <h1 class="title">My Skills</h1>
+
+            <div class="skills-box">
+              <div class="skills-content">
+                <h3>Front-End</h3>
+                <div class="content">
+                  <span><i class="bx bxl-html5"></i> HTML</span>
+                  <span><i class="bx bxl-css3"></i> Css</span>
+                  <span><i class="bx bxl-javascript"></i>Js</span>
+                  <span><i class="bx bxl-typescript"></i>TypeScript</span>
+                  <span><i class="bx bxl-vuejs"></i>Vue.js</span>
+                  <span><i class="bx bxl-git"></i>Git</span>
+                  <span><i class="bx bxl-github"></i>Gihub</span>
+                  <span><i class="bx bxl-tailwind-css"></i>Tailwincss</span>
+                </div>
+              </div>
+              <div class="skills-content">
+                <h3>Graphic-Design</h3>
+                <div class="content">
+                  <span>Photoshop</span>
+                  <span>Illustrator</span>
+                </div>
+              </div>
+                  <div class="skills-content">
+                <h3>Administrative</h3>
+                <div class="content">
+                  <span> Excel</span>
+                  <span> Word</span>
+                  <span>PowerPoint</span>
+                  <span>Outlook </span>
+                </div>
+              </div>
+            </div>
+
+             <span class="number-page">4</span>
+            <!-- prev button -->
+            <span class="nexprev-btn back" data-page="turn-2">
+              <i class="bx bx-chevron-left"></i>
+            </span>
+
           </div>
         </div>
       </div>
