Add protfolio Page

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                   <span>Illustrator</span>
                 </div>
               </div>
-                  <div class="skills-content">
+              <div class="skills-content">
                 <h3>Administrative</h3>
                 <div class="content">
                   <span> Excel</span>
@@ -253,12 +253,50 @@
               </div>
             </div>
 
-             <span class="number-page">4</span>
+            <span class="number-page">4</span>
             <!-- prev button -->
             <span class="nexprev-btn back" data-page="turn-2">
               <i class="bx bx-chevron-left"></i>
             </span>
+          </div>
+        </div>
 
+        <!-- page 5 & 6 -->
+        <div class="book-page page-right turn" id="turn-3">
+          <!-- page 5 latest Project-->
+          <div class="page-front">
+            <h1 class="title">Latest Project</h1>
+            <div class="protfolio-box">
+              <div class="img-box">
+                <img src="cofe.png" alt="" />
+              </div>
+              <div class="info-box">
+                <div class="info-title">
+                  <h3>WEBSITE (RESPONSIVE)</h3>
+                  <a href="https://hassan-abd-el-aziz.github.io/Coffee/"
+                    >Live Preview <i class="bx bx-link-external"></i
+                  ></a>
+                </div>
+                <p>Tech Used:</p>
+                <p>
+                  I designed and developed a coffee shop website to showcase my
+                  skills using HTML, CSS, and JavaScript.
+                </p>
+              </div>
+              <div class="btn-box">
+                <a href="#" class="btn">Source Code</a>
+                <a href="https://github.com/Hassan-Abd-El-Aziz" class="btn">More Projects</a>
+              </div>
+            </div>
+            <span class="number-page">5</span>
+            <!-- next button -->
+            <span class="nexprev-btn" data-page="turn-3">
+              <i class="bx bx-chevron-right"></i>
+            </span>
+          </div>
+          <!-- page 6 contactme -->
+          <div class="page-back">
+            <h1 class="title">Contact Me!</h1>
           </div>
         </div>
       </div>
