add contact  Pag

--- a/index.html
+++ b/index.html
@@ -285,7 +285,9 @@
               </div>
               <div class="btn-box">
                 <a href="#" class="btn">Source Code</a>
-                <a href="https://github.com/Hassan-Abd-El-Aziz" class="btn">More Projects</a>
+                <a href="https://github.com/Hassan-Abd-El-Aziz" class="btn"
+                  >More Projects</a
+                >
               </div>
             </div>
             <span class="number-page">5</span>
@@ -297,6 +299,38 @@
           <!-- page 6 contactme -->
           <div class="page-back">
             <h1 class="title">Contact Me!</h1>
+            <div class="contact-box">
+              <form action="#">
+                <input
+                  type="text"
+                  class="field"
+                  placeholder="Full Name"
+                  required
+                />
+                <input
+                  type="email"
+                  class="field"
+                  placeholder="Email Address"
+                  required
+                />
+                <textarea
+                  cols="30"
+                  rows="10"
+                  class="field"
+                  placeholder="Your Message"
+                ></textarea>
+                <input type="submit" class="btn" value="Send Message" />
+              </form>
+            </div>
+            <span class="number-page">6</span>
+            <!-- prev button -->
+            <span class="nexprev-btn back" data-page="turn-3">
+              <i class="bx bx-chevron-left"></i>
+            </span>
+            <a href="#" class="back-profile">
+              <p>Profile</p>
+              <i class="bx bxs-user"></i>
+            </a>
           </div>
         </div>
       </div>
