--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <div class="cover cover-left"></div>
-      <div class="cover cover-right turn"></div>
+      <div class="cover cover-right "></div>
 
       <div class="book">
         <!-- profile-Page-start -->
@@ -41,8 +41,8 @@
               continue learning new technologies
             </p>
             <div class="btn-box">
-              <a href="" class="btn">Download CV</a>
-              <a href="" class="btn contact-me">Contact Me</a>
+              <a href="#" class="btn">Download CV</a>
+              <a href="#" class="btn contact-me">Contact Me</a>
             </div>
           </div>
         </div>
